[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{agent_name}}"
version = "0.1.0"
description = "{{agent_description}}"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Flow AI", email = "support@flow-ai.com" }]
dependencies = [
  "pydantic-ai>=0.7.4",
  "python-dotenv>=1.1.1"
  "logfire>=4.3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "ruff>=0.12",
  "mypy>=1.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
pretty = true